--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -43,10 +43,10 @@
 <script src="js/dashboard.js"></script>
 
 <script>
-  // Update greeting or username display if you want full name
+  // Update greeting or username display
   const usernameDisplay = document.getElementById("usernameDisplay");
 
-  // When loadUser() in authCheck.js resolves, we can show the name
+  // When loadUser() in authCheck.js resolves
   async function showUsername() {
     try {
       const res = await fetch("/api/auth/me", {
