--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -38,12 +38,12 @@
 
 </div>
 
-<!-- Include the global auth check script -->
+<!-- Include the global script -->
 <script src="js/authCheck.js"></script>
 <script src="js/dashboard.js"></script>
 
 <script>
-  // Update greeting or username display
+  // Update greeting
   const usernameDisplay = document.getElementById("usernameDisplay");
 
   // When loadUser() in authCheck.js resolves
