Sprint 2 feature and improvements
Auth/role protection
Category/recipe/user management
Bulk operations and self‑protection
Analytics pipelines and dynamic charts
Audit trails, validation, error handling
Demo data seeding and entry points

--- a/frontend/admin-login.html
+++ b/frontend/admin-login.html
@@ -289,8 +289,8 @@
         // Save JWT token
         localStorage.setItem('token', data.token);
 
-        // Redirect to dashboard (user is guaranteed to be admin if login succeeded)
-        window.location.href = 'dashboard.html';
+        // Redirect to admin dashboard
+        window.location.href = 'admin-dashboard.html';
 
       } catch (err) {
         console.error(err);
