feat: Add forgot password functionality with email verification and OTP

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -38,6 +38,11 @@
           <input type="password" id="password" placeholder="Password" required />
         </div>
 
+        <p class="forgot-password">
+          <a href="#" id="forgotPasswordLink">Forgot Password?</a>
+        </p>
+
+
         <div class="remember-me">
           <label>
             <input type="checkbox" id="rememberEmail" />
