--- a/frontend/pages/recipedetails.html
+++ b/frontend/pages/recipedetails.html
@@ -2,7 +2,7 @@
 <div class="top-bar">
   <h2>Recipe Details</h2>
   <a class="add-recipe" href="/dashboard.html" id="backBtn">
-    ← Back to Recipes
+    < Back to Recipes
   </a>
 </div>
 
